fix font on iOS to Chalkboard

--- a/static/styles.css
+++ b/static/styles.css
@@ -38,7 +38,7 @@ thead {
 }
 
 tbody td {
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Chalkboard", "Comic Sans MS", sans-serif;
     font-variant: small-caps;
     font-weight: bold;
     font-size: 16pt;
